macro(add_exec _name _src)
  set(exec_name std_${_name})
  add_executable(${exec_name} ${_src})
  set_target_properties(
    ${exec_name}
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/ )
endmacro()

add_exec(templated_for_loop templatedForLoop.cpp)
add_exec(for_each for_each.cpp)
add_exec(inheritance inheritance.cpp)
add_exec(inheritance2 inheritance2.cpp)
add_exec(inheritance3 inheritance3.cpp)
add_exec(conversion conversion.cpp)
add_exec(pretty_func PrettyFuncMacro.cpp)
add_exec(vector Vector.cpp)
add_exec(weak_ptr WeakPtr.cpp)
add_exec(cast_operator CastOperator.cpp)
add_exec(template_specialization TemplateSpecialization.cpp)
add_exec(ostream_template_overload ostreamTemplateOverload.cpp)
add_exec(explicit_bool_operator explicit_bool_operator.cpp)
